assets/css/style.css
@import url("https://fonts.googleapis.com/css2?family=Aldrich&display=swap");

body {
  text-align: center;
  background-color: rgb(243, 255, 240);
  position: relative;
  max-height: 100%;
  margin-left: auto;
  margin-right: auto;
}

h1 {
  margin-top: -1.6vh;
  font-size: 400%;
  font-style: italic;
  font-family: cursive;
  margin-bottom: 4vh;
}
h2 {
  font-size: 150%;
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
  margin-top: 2.3vh;
}
header {
  position: fixed;
  top: 0;
  background-color: rgb(243, 255, 240);
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  padding-top: 1.8vh; /*CREDO SIA NECESSARIO PER DISTANZIARE IL TOP DEL BODY, A CAUSA DEL POSITION FIXED O DEL FLOW NELL'HEADER*/
  padding-bottom: 5vh; /*MESSO SOLO PER NON FAR SFORARE BORDO A SX DI LENTE DURANTE LO SCORRIMENTO,
                        DA ACCORCIARE QUEL BORDO*/
}

a {
  cursor: pointer;
  /* text-decoration: none;  QUANDO VERRANNANNO AGIGUNTI HREF*/
}
.navBar1 {
  overflow: auto;
  margin-left: 1.8vh;
  margin-right: 1.8vh;
  /* display: flex; */
}
.aPrimaMetàNav1 {
  float: left;
  padding: 0.8vh;
  font-family: "Aldrich", sans-serif;
  font-weight: bold;
}
.aPrimaMetàNav1:hover {
  text-decoration: underline 1.5px;
}
.aSecondaMetàNav1 {
  float: right;
  padding: 0.8vh;
  transition: 0.6s ease-in-out;
}
.aSecondaMetàNav1:hover {
  color: rgb(183, 0, 0);
}

.navBarFissa {
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  position: absolute;
}
.divHoverNavBarF {
  background-color: aqua;
  padding: 6vh;
  width: 800%;
  position: absolute;
  top: 32.5vh; /*CENTRA I DIV CHE APPAIONO SOTTO ANCORE*/
  left: 50%; /*   ""                            ""   */
  transform: translate(-50%, -50%); /*   ""                            ""   */
  z-index: 2;
}
.divHoverNavBarF > img {
  padding: 1.7vh;
  max-width: 200%;
  z-index: 3;
  position: relative;
}
.aNavFissa {
  padding: 1rem;
  font-family: "Aldrich", sans-serif;
  font-weight: bold;
  transition: 0.6s ease-in-out;
  position: relative;
  text-align: center;
}
.aNavFissa:hover {
  font-size: 105%;
  text-decoration: underline rgb(183, 0, 0) 3px;
}
.lenteNavFissa {
  border-left: 1px solid;
  padding: 1.3em;
  transition: 0.3s ease-in-out;
  position: relative;
}
.lenteNavFissa:hover {
  color: rgb(183, 0, 0);
  border-color: black;
  font-size: 110%;
}
main {
  margin-top: 12vh;
  padding-top: 4%;
  margin-bottom: 1.3vh;
  margin-left: 1.8vh;
  margin-right: 1.8vh;
}
section {
  margin-bottom: 5.5vh;
  margin-top: 2.5vh;
}

section > article > p {
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
  margin-top: 1vh;
  margin-bottom: 1vh;
  font-style: italic;
  font-size: 120%;
}
section > article > a {
  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
  font-size: 110%;
  border-bottom: 2px solid;
}

section > article > a:hover {
  border-bottom: none;
}
.parallax {
  width: 100%;
  max-width: 95%;
  max-height: 70vh;
  object-fit: cover;
  box-shadow: 17px 18px 27px -11px rgba(0, 0, 0, 0.5);
}

/* .parallax {
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
} */

.broImg2Main,
.img2Main {
  width: 50%;
  min-width: 120px;
  max-width: 1200px;
  display: inline-block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 1vh;
}
.img2Main {
  width: 100%;
  box-shadow: 17px 18px 27px -11px rgba(0, 0, 0, 0.4);
}
footer {
  background-color: black;
}
footer > div {
  font-size: 110%;
  padding-top: 4vh;
  padding-bottom: 4vh;
  width: 100%;
  display: flex;
  justify-content: space-evenly;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  font-size: 150%;
}
footer > div > ul,
li {
  color: aliceblue;
}
footer > div > ul h6 {
  margin-bottom: 20px;
}
.aFooter {
  font-size: 60%;
  align-items: center;
}
/* @media screen and (min-width: 576x) {
  h1 {
    font-size: 240%;
  }
  header,
  main {
    margin-left: auto;
    margin-right: auto;
    width: 100%;
  }
  footer > div {
    margin-left: auto;
    margin-right: auto;
    width: 100%;
  }
} */

